php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #42135 Second call of session_start() causes creation of SID
Submitted: 2007-07-28 22:32 UTC Modified: 2007-07-29 14:43 UTC
From: vrana@php.net Assigned:
Status: Closed Package: Session related
PHP Version: 5.2.3 OS: Irrelevant
Private report: No CVE-ID: None
 [2007-07-28 22:32 UTC] vrana@php.net
Description:
------------
PS(define_sid) = 1;
PS(send_cookie) = 1;

in session.c is before

if (PS(session_status) != php_session_none)

thus SID is created and cookie is sent uncoditionally in case of second call of session_start().

Reproduce code:
---------------
session_start();
session_start();
echo SID;

Expected result:
----------------
Nothing in case of sent cookie.

Actual result:
--------------
PHPSESSID=...

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2007-07-29 14:43 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 18:00:01 2026 UTC