Fixed bug #42135 (Second call of session_start() causes creation of SID)